# strava-to-postgres

./: .env.example  .gitignore  Dockerfile  README.md  activities.qgz  activity_db_client.py  docker-compose.yml  download.py  example_activity.json  pyproject.toml  schema.sql  strava_client.py
